FIX: minor fixes to msg-actions
- ensures menu is disappearing correctly when interacting with another message
- ensures mobile menu is not showing focus state
-

--- a/assets/stylesheets/mobile/chat-message.scss
+++ b/assets/stylesheets/mobile/chat-message.scss
@@ -154,6 +154,12 @@
           background: none;
           width: 100%;
           border: 0;
+          color: var(--primary);
+
+          &:focus,
+          .d-icon {
+            color: var(--primary);
+          }
         }
       }
     }
